cmake_minimum_required(VERSION 3.19)
project(leetcode_cpp2)

set(CMAKE_CXX_STANDARD 14)

#add_executable(leetcode_cpp2 src/main.cpp src/_6Convert/Solution.cpp src/_6Convert/Solution.h src/util/StringUtil.cpp src/util/StringUtil.h)
add_executable(leetcode_cpp2 src/main.cpp src/util/StringUtil.cpp src/util/StringUtil.h src/_7Reverse/Solution.cpp src/_7Reverse/Solution.h)
#add_executable(leetcode_cpp2 src/main.cpp src/util/StringUtil.cpp src/util/StringUtil.h)